구혀 Changes to be committed: 	modified:   "docs/\353\252\250\353\223\210_\352\265\254\355\230\204_\354\240\234\354\225\210.md" 	modified:   examples/app.js 	modified:   examples/index.html 	modified:   examples/views/forms.html 	new file:   examples/views/media-demo.html 	new file:   examples/views/onboarding-demo.html 	modified:   examples/views/scroll-demo.html 	modified:   package.json 	modified:   rollup.config.js 	modified:   src/core/router.js 	modified:   src/modules/list/list.scss 	new file:   src/modules/media/media.js 	new file:   src/modules/media/media.scss 	new file:   src/modules/onboarding/onboarding.js 	new file:   src/modules/onboarding/onboarding.scss 	modified:   src/styles/components/_forms.scss

--- a/docs/모듈_구현_제안.md
+++ b/docs/모듈_구현_제안.md
@@ -7,7 +7,7 @@
 
 ## 1. 현재 구현 현황
 
-### 1.1 구현 완료 모듈 (15개, 58개 클래스)
+### 1.1 구현 완료 모듈 (17개, 66개 클래스)
 
 | 모듈 | 클래스 | 상태 |
 |------|--------|------|
@@ -26,6 +26,8 @@
 | **list** | SwipeableList, ReorderableList, CheckList, GroupedList | ✅ 완료 (2025.11.30) |
 | **auth** | OTPInput, PinInput, PasswordInput, SocialLoginButtons, BiometricPrompt | ✅ 완료 (2025.11.30) |
 | **search** | SearchBar, SearchHistory, SearchFilter, SearchSuggestion | ✅ 완료 (2025.11.30) |
+| **media** | ImageCropper, VideoPlayer, AudioPlayer, MediaPreview | ✅ 완료 (2025.11.30) |
+| **onboarding** | IntroSlider, FeatureSpotlight, Coachmark, PermissionGuide | ✅ 완료 (2025.11.30) |
 
 ### 1.2 기능 커버리지 분석
 
