modified:   docs/API.md 	modified:   "docs/\353\252\250\353\223\210_\352\265\254\355\230\204_\354\240\234\354\225\210.md" 	modified:   "docs/\355\224\204\353\240\210\354\236\204\354\233\214\355\201\254_\354\204\244\352\263\204_\354\235\264\353\205\220.md" 	modified:   examples/app.js 	new file:   examples/views/calendar-demo.html 	modified:   examples/views/device.html 	modified:   examples/views/feedback-demo.html 	modified:   examples/views/forms-demo.html 	modified:   examples/views/forms.html 	modified:   examples/views/home.html 	new file:   examples/views/payment-demo.html 	modified:   examples/views/scroll-demo.html 	modified:   examples/views/state.html 	modified:   examples/views/touch.html 	modified:   package.json 	modified:   rollup.config.js 	modified:   src/core/index.js 	modified:   src/core/loader.js 	modified:   src/core/router.js 	new file:   src/modules/calendar/calendar.js 	new file:   src/modules/calendar/calendar.scss 	modified:   src/modules/onboarding/onboarding.js 	new file:   src/modules/payment/payment.js 	new file:   src/modules/payment/payment.scss

--- a/docs/모듈_구현_제안.md
+++ b/docs/모듈_구현_제안.md
@@ -7,11 +7,11 @@
 
 ## 1. 현재 구현 현황
 
-### 1.1 구현 완료 모듈 (17개, 66개 클래스)
+### 1.1 구현 완료 모듈 (19개, 78개 클래스)
 
 | 모듈 | 클래스 | 상태 |
 |------|--------|------|
-| **theme** | Theme | ✅ 완료 |
+| **theme** | Theme, createTheme, getTheme, initTheme | ✅ 완료 |
 | **overlays** | Overlay, Modal, Toast, Drawer, Tooltip, Popover, Notice | ✅ 완료 |
 | **navigation** | TabBar, SwipeTabs, AppBar, PullToRefresh, ScrollSpy, Collapse, Accordion, BackButton | ✅ 완료 |
 | **pickers** | DatePicker, TimePicker, ColorPicker, Countdown, DDay | ✅ 완료 |
@@ -28,6 +28,8 @@
 | **search** | SearchBar, SearchHistory, SearchFilter, SearchSuggestion | ✅ 완료 (2025.11.30) |
 | **media** | ImageCropper, VideoPlayer, AudioPlayer, MediaPreview | ✅ 완료 (2025.11.30) |
 | **onboarding** | IntroSlider, FeatureSpotlight, Coachmark, PermissionGuide | ✅ 완료 (2025.11.30) |
+| **payment** | CardInput, PaymentMethods, PriceBreakdown, ReceiptView | ✅ 완료 (2025.12.01) |
+| **calendar** | MonthCalendar, WeekView, DateRangePicker, EventCard | ✅ 완료 (2025.12.01) |
 
 ### 1.2 기능 커버리지 분석
 
@@ -39,11 +41,11 @@
 [████████████████████] 100%  피커/선택기
 [████████████████████] 100%  피드백/알림
 [████████████████████] 100%  인증 UI (OTP, PIN, Password 완료)
-[░░░░░░░░░░░░░░░░░░░░]   0%  미디어 처리
-[████░░░░░░░░░░░░░░░░]  20%  검색 (Autocomplete만)
-[░░░░░░░░░░░░░░░░░░░░]   0%  온보딩/가이드
-[░░░░░░░░░░░░░░░░░░░░]   0%  결제 UI
-[░░░░░░░░░░░░░░░░░░░░]   0%  캘린더
+[████████████████████] 100%  미디어 처리 (ImageCropper, VideoPlayer 완료)
+[████████████████████] 100%  검색 (SearchBar, SearchHistory 완료)
+[████████████████████] 100%  온보딩/가이드 (IntroSlider, Coachmark 완료)
+[████████████████████] 100%  결제 UI (CardInput, PaymentMethods 완료)
+[████████████████████] 100%  캘린더 (MonthCalendar, WeekView 완료)
 ```
 
 ---
